test/scc/expr/semantic-errors/170.t
void test()
{
    __offsetof(struct { int a; }, aa);
}